# fmt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  TC-STM32H7.cmake  setup_cc.sh
include/: Control.h  InputDevice.h  PushButton.h  controlSurface.h  input.h  parameter.h  rotaryEncoder.h
include/fmt/: format-inl.h
lib/spdlog/: libspdlog.a.cc  libspdlog.a.rpi32bit
src/: CMakeLists.txt  Control.cpp  InputDevice.cpp  PushButton.cpp  controlSurface.cpp  input.c  main.cpp  parameter.cpp  rotaryEncoder.cpp
src/linux/: InputDevice.cpp  PushButton.cpp  input.c  rotaryEncoder.cpp
